Merge 9 phrase()/string() adjacencies into single phrase() calls
Every existing site where phrase("...") is chained with string(",") or
string(".") now uses one phrase() call carrying the punctuation as a
template token. The matched-text result is discarded at all 9 sites so
the merge is behaviorally equivalent. Also drops the now-unused
Parser.string import in CounterEffectParsers and replaces a
get(0) with getFirst() in Words#fold.